--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,9 +4,27 @@
 <head>
   <meta charset="utf-8">
   <title>Mentor Me</title>
-  <meta charset="utf-8">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
+
+<!-- css style sheets-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
+
+
+<!-- font awesome -->
+<script src="https://kit.fontawesome.com/4e2fbf1e4f.js" crossorigin="anonymous"></script>
+
+  <!-- bootstrap scripts -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
+</head>
+<body>
+  <section class="colored-section" id="title">
+<div class="container-fluid">
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
@@ -15,12 +33,14 @@
       </div>
         <ul class="nav navbar-nav navbar-right">
           <!-- 6 -->
-          <li id="home"><a href="/">home</a></li>
-          <li id="signup"><a href="/signup">SIGN UP/LOGIN</a></li>
+          <li id="home"><a href="/">Home</a></li>
+          <li id="signup"><a href="/signup">Signup/Login</a></li>
         </ul>
     </div>
   </nav>
+  
+</div>
+  </section>
 
 
   <body>
-    <div class="container">
