--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,28 +11,131 @@
 </head>
 
 <body>
-  <div class="body-carousel">
-    <section class="carousel">
-      <div class="carousel_slider">
-        <div class="content_inner_slider">
-          <img src="/images/slideshow1.jpg" alt="" class="img">
-          <img src="/images/slideshow2.png" alt="" class="img">
-          <img src="/images/slideshow3.jpg" alt="" class="img">
-          </div>
-        <button class="prev_button">
-          <ion-icon name="chevron-back-outline"></ion-icon>
-        </button>
-        <button class="next_button">
-          <ion-icon name="chevron-forward-outline"></ion-icon>
-        </button>
-      </div>
-      <ul class="dots">
-        <li class="dot" value="0"></li>
-        <li class="dot" value="1"></li>
-        <li class="dot" value="2"></li>
-      </ul>
-    </section>
+  <div class="row">
+  <div class="col-lg-6">
+  <h1 class="big-heading">Get guidance from experienced mentor for free.</h1>
+  <div class="col-lg-6">
+     <img class="title-image" src="/images/slideshow2.png" alt="iphone-mockup">
+   </div>
+
   </div>
+
+
+
+      </div>
+
+  <!-- Features -->
+
+  <section class="white-section" id="features">
+<div class="container-fluid">
+    <div class="row">
+
+  <div class="col-lg-4  ">
+
+
+<i class="fas fa-check-circle"></i>
+    <h3 class="feature-title">  Easy to use.</h3>
+    <p class="para">Easy accessible for anyone.</p>
+    </div>
+    <div class="col-lg-4 ">
+
+
+<i class="fas fa-bullseye"></i>
+    <h3 class="feature-title"> Necessary Guidance</h3>
+    <p class="para">Get guaranteed guidance any time.</p>
+      </div>
+        <div class="col-lg-4 ">
+<i class="fas fa-heart"></i>
+    <h3 class="feature-title">Guaranteed to work.</h3>
+    <p class="para">Find the love of your
+       dog's life or your money back.</p>
+  </div>
+</div>
+</div>
+  </section>
+
+  <!-- Carousels -->
+  <section class="images">
+    <img src="/images/slideshow1.jpg" alt="logo" class="img">
+  </section>
+
+
+
+    <!-- Press -->
+
+
+
+    <!-- Pricing -->
+
+    <section  class="white-section"id="pricing">
+
+      <h2 class="section-heading">Guidance What Every Student Needs</h2>
+      <p class="para">students come get guidance from mentors.</p>
+
+
+
+  <div class=" row">
+
+
+
+    <div class="pricing-column col-lg-4 col-md-6">
+
+      <div class="card">
+
+        <div class="card-header">
+            <h3>Resources</h3>
+        </div>
+        <div class="card-body">
+      <h2 class="price-text"></h2>
+      <p class="para">Workshops every week</p>
+      <p class="para">webinars on demands</p>
+      <p class="para">Alumni contacts</p>
+      </div>
+      </div>
+    </div>
+
+  <div class="pricing-column col-lg-4 col-md-6">
+      <div class="card">
+        <div class="card-header">
+        <h3>Features</h3>
+        </div>
+        <div class="card-body">
+      <h2 class="price-text"></h2>
+          <p class="para">Unlimited Mentor meets</p>
+          <p class="para">guidance for every field</p>
+          <p class="para">virtual sessions</p>
+        </div>
+      </div>
+  </div>
+
+  <div class="pricing-column col-lg-4">
+
+
+      <div class="card">
+        <div class="card-header">
+      <h3>guidance</h3>
+        </div>
+        <div class="card-body">
+   <h2 class="price-text"></h2>
+        <p class="para">Pirority Listing</p>
+        <p class="para">Unlimited Matches</p>
+        <p class="para">Unlimited Messages</p>
+    </div>
+      </div>
+  </div>
+  </div>
+  </section>
+
+
+    <!-- Call to Action -->
+
+    <section class="colored-section" id="cta">
+  <div class="container-fluid">
+
+
+      <h3 class="big-heading">Find the way to your career today.</h3>
+    </section>
+
 
 </body>
 
@@ -225,3 +328,4 @@
   };
 
 </script>
+<%- include("partials/footer"); -%>
