--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,7 +34,7 @@
             <input type="password" placeholder="Password*" required autocomplete="off"/>
           </div>
 
-          <button type="submit" class="button button-block"/>Get Started</button>
+          <button type="submit" class="buttons button-block">Get Started</button>
 
           </form>
 
@@ -57,7 +57,7 @@
 
           <p class="forgot"><a href="#">Forgot Password?</a></p>
 
-          <button class="button button-block"/>Log In</button>
+          <button class="buttons button-block">Log In</button>
 
           </form>
 
